--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="https://user-images.githubusercontent.com/63100352/158023445-57c487a7-f57c-403e-9c16-4e9e7b164d06.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="온수역의 맛집을 소개하는 서비스 온수냠냐미(onsuyumyumi)입니다." />
+    <meta name="keywords" content="온수역 맛집 소개 서비스 - 온수냠냐미(onsuyumyumi)입니다." />
+    <meta property="og:url" content="https://onsu-yum-yumi.vercel.app/" />
+    <meta property="og:title" content="온수냠냐미" />
+    <meta property="og:description" content="온수역 맛집 소개 서비스 - 온수냠냐미(onsuyumyumi)입니다." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
