--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://user-images.githubusercontent.com/63100352/158023445-57c487a7-f57c-403e-9c16-4e9e7b164d06.png" />
+    <link
+      rel="icon"
+      href="https://user-images.githubusercontent.com/63100352/158023445-57c487a7-f57c-403e-9c16-4e9e7b164d06.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="온수역의 맛집을 소개하는 서비스 온수냠냐미(onsuyumyumi)입니다." />
-    <meta name="keywords" content="온수역 맛집 소개 서비스 - 온수냠냐미(onsuyumyumi)입니다." />
+    <meta
+      name="description"
+      content="온수역의 맛집을 소개하는 서비스 온수냠냐미(onsuyumyumi)입니다."
+    />
+    <meta
+      name="keywords"
+      content="온수역 맛집 소개 서비스 - 온수냠냐미(onsuyumyumi)입니다."
+    />
     <meta property="og:url" content="https://onsu-yum-yumi.vercel.app/" />
     <meta property="og:title" content="온수냠냐미" />
-    <meta property="og:description" content="온수역 맛집 소개 서비스 - 온수냠냐미(onsuyumyumi)입니다." />
+    <meta
+      property="og:description"
+      content="온수역 맛집 소개 서비스 - 온수냠냐미(onsuyumyumi)입니다."
+    />
     <meta property="og:image" content="%PUBLIC_URL%/poster.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/poster.png" />
 
     <title>온수냠냐미</title>
+
+    <!-- Hotjar Tracking Code for https://onsu-yum-yumi.vercel.app/ -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2877988, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
